<resources>
    <string name="app_name">BiciRoute</string>
    <string name="preference_file_key">SharedPreferenceFileKey</string>
    <string name="id_user">id_user</string>

    <string name="origen"></string>
    <string name="destino"></string>


    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_routes">Routes</string>
    <string name="menu_profile">Profile</string>

    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="login_email">Ingresa tu correo</string>
    <string name="login_password">Ingresa tu contraseña</string>
    <string name="login_button">Login</string>

    <string name="singup_name">Ingresa tu nombre</string>
    <string name="singup_last_name">Ingresa tu apellido</string>
    <string name="singup_email">Ingresa tu correo</string>
    <string name="singup_passsword">Ingresa tu contraseña</string>
    <string name="singup_button">Registrarse</string>


    <string name="title_activity_maps">Map</string>
    <string name="find_address">Find Address</string>
    <string name="address">Address</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="no_address_found">no address found</string>
    <string name="address_found">address found</string>
    <string name="service_not_available">service not available</string>
    <string name="invalid_lat_long_used">invalid lat long used</string>


</resources>
